# tg-bot

./: .env.example  .gitignore  AGENTS.md  DEMO.md  PAYOUTS.md  README.md  SCOPE.md  docker-compose.yml  package-lock.json  package.json  railway.json  vite.config.ts
.github/workflows/: ci.yml
contracts/escrow/: Cargo.toml  README.md
contracts/escrow/src/: lib.rs
db/docker-init/: 01-create-test-db.sql
db/migrations/: 001_initial.sql  002_rooms.sql  003_notifications_prune_index.sql  004_ai_mode.sql  005_payouts.sql  006_wallet_links.sql  007_payout_accounts.sql  008_history_indexes.sql  009_payout_proposals.sql  010_contributor_payout_account.sql  011_payout_amount.sql  012_drop_wallet_links.sql  013_payout_attention.sql  014_payout_status_check.sql  015_payout_superseded_claims.sql  016_drop_payout_superseded_claims.sql  017_hot_path_indexes.sql  README.md
docs/: outlayer-setup.md
scripts/: agent-tools-demo.ts  ai-agent-smoke.ts  ai-smoke.ts  core-demo.ts  dao-check.ts  dao-demo.ts  dao-live.ts  dao-propose-live.ts  dao-settle-live.ts  db-init.ts  db-reset.ts  demo-loop.ts  edge-demo.ts  harness.ts  preview.ts  queue-demo.ts  rooms-demo.ts  run.ts  seed.ts  testdb.ts  web-smoke.ts
src/: config.ts  index.ts
src/ai/: agent.ts  agentTools.ts  assist.ts  client.ts
src/bot/: background.ts  context.ts  format.ts  i18n.ts  index.ts  keyboards.ts  notify.ts  roomContext.ts  signals.ts  worker.ts
src/core/: db.ts  service.ts  workflow.ts
src/near/: account.ts  client.ts  dao.ts  escrow.ts  outlayer.ts
src/web/: api.ts  (+3 more)
web/: index.html  tsconfig.json
(+32 files in other folders)
