[package]
name = "escrow"
version = "0.1.0"
edition = "2021"
description = "MultiAgency bounty claim escrow — the treasury allocates + funds a payout; the contributor pulls it. The bot server never signs."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "5.6"

[dev-dependencies]
near-sdk = { version = "5.6", features = ["unit-testing"] }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
